# metro-sp-backend

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  biome.json  docker-compose.yml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
prisma/: schema.prisma
src/: __init__.py  app.module.ts  main.ts  mikro-orm.config.ts
src/auth/: auth.module.ts  auth.service.ts
src/auth/errors/: unauthorized.error.ts
src/auth/middlewares/: login-validation.middleware.ts
src/auth/models/: LoginRequestBody.ts
src/auth/strategies/: local-.strategy.ts
src/modules/: __init__.py
src/modules/ai/: ai.controller.ts  ai.module.ts
src/modules/auth/: auth.module.ts
src/modules/client/: __init__.py  client.controller.ts  client.module.ts  client_controller.py
src/modules/entrance/: entrance.controller.ts  entrance.module.ts
src/modules/global/: global.module.ts
src/modules/log/: log.controller.ts  log.module.ts
src/modules/passenger/: passenger.controller.ts  passenger.module.ts
src/modules/station/: __init__.py  station.controller.ts  station.module.ts  station_controller.py
src/modules/terminal/: terminal.controller.ts  terminal.module.ts
src/modules/user/: __init__.py  user.controller.ts  user.module.ts  user_controller.py
src/shared/config/: mikro-orm.config.ts
src/shared/datasources/: ai.datasource.ts  datasource.ts
src/shared/decorators/: cpf-validator.ts  latitude.decorator.ts  longitude.decorator.ts  permissions.decorator.ts
src/shared/entities/: base.entity.ts  dynamo.ts
src/shared/enums/: http-method.enum.ts
(+143 files in other folders)
