[project]
name = "metro-sp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
dev = "fastapi dev src/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
    "taskipy>=1.13.0",
]
